Updated asset_manager configuration

--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -7,8 +7,8 @@
 
 	<title><%= s(:site_name) %></title>
 	
-	<%= stylesheet_link_tag 'dialog' %>
-  	<%= javascript_include_tag :defaults %>
+	<%= stylesheet_link_merged :dialog %>
+  	<%= javascript_include_merged :base %>
   
 </head>
 
