--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,9 +7,8 @@
 
 	<title><%= s(:site_name) %></title>
 	
-	<%= stylesheet_link_tag 'default' %>
-	<%= stylesheet_link_tag 'admin' %>
-  	<%= javascript_include_tag :defaults %>
+	<%= stylesheet_link_merged :admin %>
+  	<%= javascript_include_merged :base %>
   
 </head>
 
