--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
 
 	<title><%= s(:site_name) %></title>
 	
-	<%= stylesheet_link_tag 'default' %>
-  	<%= javascript_include_tag :defaults %>
+	<%= stylesheet_link_merged :base %>
+  	<%= javascript_include_merged :base %>
   
 </head>
 
