Installed and use Configatron

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :header do -%>
-	<%= s(:site_name) %> Administration
+	<%= configatron.site_name %> Administration
 <% end -%>
 
 <% content_for :sidebar do -%>
