--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :header do -%>
-	<%= s(:site_name) %> Users
+	<%= configatron.site_name %> Users
 <% end -%>
 
 <% content_for :sidebar do -%>
