--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :header do -%>
-Create a new <%= s(:site_name) %> account
+Create a new <%= configatron.site_name %> account
 <% end -%>
 
 <% content_for :sidebar do -%>
