--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :header do -%>
-	My <%= s(:site_name) %>
+	My <%= configatron.site_name %>
 <% end -%>
 
 <% content_for :sidebar do -%>
