--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title><%= s(:site_name) %></title>
+	<title><%= configatron.site_name %></title>
 	
 	<%= stylesheet_link_merged :base %>
   	<%= javascript_include_merged :base %>
@@ -18,7 +18,7 @@
     <div id="global_links">
       <%= render :partial => 'shared/global_links' %>
     </div>
-    <h1><%= s(:site_name) %> <span><%= s(:company_name) %></span></h1>
+    <h1><%= configatron.site_name %> <span><%= configatron.company_name %></span></h1>
 
     <div id="tabs">
       <%= render :partial => 'shared/tabs' %>
@@ -51,8 +51,8 @@
     </div>
   </div>
   <div id="footer">
-    <%= s(:site_name) %> by <%= s(:company_name) %><br />
-	Copyright © <%= s(:company_name) %>
+    <%= configatron.site_name %> by <%= configatron.company_name %><br />
+	Copyright © <%= configatron.company_name %>
   </div>
 
 
