--- a/app/views/users/new.rhtml
+++ b/app/views/users/new.rhtml
@@ -1,11 +1,11 @@
 <% @user.password = @user.password_confirmation = nil %>
 
 <% content_for :header do -%>
-Create a new <%= s(:site_name) %> account
+Create a new <%= configatron.site_name %> account
 <% end -%>
 
 <p>
-	You are about to register a new, free <%= s(:site_name) %> account. Please fill out this simple form.
+	You are about to register a new, free <%= configatron.site_name %> account. Please fill out this simple form.
 </p>
 
 <p>
