--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -20,6 +20,6 @@
 	</p>
 	
 	<p>
-		To obtain a new password, please contact <%= s(:support_name) %> at <%= secure_mail_to s(:support_email) %>.
+		To obtain a new password, please contact <%= configatron.support_name %> at <%= secure_mail_to configatron.support_email %>.
 	</p>
 <% end %>
