--- a/app/views/admin/dashboard/_sidebar.html.erb
+++ b/app/views/admin/dashboard/_sidebar.html.erb
@@ -7,5 +7,5 @@
 <h2>Settings</h2>
 
 <ul>
-	<li><%= link_to "Manage #{s(:site_name)} settings", admin_settings_url %></li>
+	<li><%= link_to "Manage #{configatron.site_name} settings", admin_settings_url %></li>
 </ul>
