--- a/app/views/users/clueless.html.erb
+++ b/app/views/users/clueless.html.erb
@@ -3,11 +3,11 @@
 <% end -%>
 
 <p>
-	You have indicated you can't remember your <%= s(:site_name) %> account at all.
+	You have indicated you can't remember your <%= configatron.site_name %> account at all.
 </p>
 
 <p>
-	We can't help you directly to recover you account. Please contact <%= s(:support_name) %> at <%= secure_mail_to s(:support_email) %> for more help. 
+	We can't help you directly to recover you account. Please contact <%= support_name %> at <%= secure_mail_to configatron.support_email %> for more help. 
 </p>
 
 <p>
