--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -8,7 +8,7 @@
 		<p>Please follow the instructions in the email to recover your account's password.</p> 
 	<% else %>
 		<p>Your account is currently not active. You cannot reset your password when your account is not active.</p>
-		<p>Please contact <%= s(:support_name) %> at <%= secure_mail_to s(:support_email) %>
+		<p>Please contact <%= configatron.support_name %> at <%= secure_mail_to configatron.support_email %>
 	<% end %>
 <% else %>
 	<p>Please enter the login or email address associated with your account. We will send you an email with further instructions shortly.</p>
