--- a/app/views/users/new.rhtml
+++ b/app/views/users/new.rhtml
@@ -5,16 +5,28 @@ Create a new <%= configatron.site_name %> account
 <% end -%>
 
 <p>
-	You are about to register a new, free <%= configatron.site_name %> account. Please fill out this simple form.
+	To access <%= configatron.site_name %> you may sign up with your OpenID. If you don't have an OpenID yet, we recommend <a href="http://www.myopenid.com">MyOpenID</a>.
 </p>
 
-<p>
-	Already have an account? <%= link_to("Login here", login_url)%>
-</p>
 
 <% form_for :user, :url => users_path do |f| -%>
 	<%= error_messages_for :user %>
-	<fieldset>	
+	<fieldset id="openid_form">
+		<legend>Signup with OpenID</legend>
+		<p><label for="openid_url">OpenID URL</label><br/>
+		<%= text_field_tag :openid_url, params[:openid_url] || params['openid.identity'] %></p>
+		
+		<div class="js_option">
+			<%= link_to_function "... or signup the old-fashioned way.", 
+			"Element.hide('openid_form');
+			 Element.show('oldfashioned_form');"
+			%>
+		</div>
+	</fieldset>
+	
+
+	
+	<fieldset id="oldfashioned_form" style="display: none">	
 		<legend>Your Details</legend>
 		<p><label for="login">Login</label><br/>
 		<%= f.text_field :login %></p>
@@ -27,12 +39,19 @@ Create a new <%= configatron.site_name %> account
 
 		<p><label for="password_confirmation">Confirm Password</label><br/>
 		<%= f.password_field :password_confirmation %></p>
+		
+		<div class="js_option">
+			<%= link_to_function "... or signup with OpenID.", 
+			"Element.hide('oldfashioned_form');
+			 Element.show('openid_form');"
+			%>
+		</div>
+		
 	</fieldset>
-	<fieldset>
-		<legend>Signup with OpenID</legend>
-		<p><label for="openid_url">OpenID URL</label><br/>
-		<%= text_field_tag :openid_url, params[:openid_url] || params['openid.identity'] %></p>
-	</fieldset>
+	
+	<ul>
+		<li><%= link_to "Already signed up? Login now!", login_url %></li>
+	</ul>
 	
 	<div id="submitbutton">
 		<p><%= submit_tag 'Sign up' %></p>
