--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -10,6 +10,12 @@
 	<% end -%>
 
 	<%= render :partial => 'profiles/my_account' if current_user == @user %>
+
+	<% unless @profile.user.not_using_openid? %>
+	<p>
+		This is your <%= configatron.site_name %> profile. It's not related to your OpenID Identity.
+	</p>
+	<% end %>
 	
 	<% form_for :profile, @profile, :url => profile_url(@profile.user), :html => {:method => :put} do |f| %>
 	
