--- a/app/views/admin/shared/_tabs.html.erb
+++ b/app/views/admin/shared/_tabs.html.erb
@@ -1,5 +1,7 @@
 <ul>
+	<% if Settings.count > 0 %>
 	<li style="float: right;"><%= tab_to "Settings", [{:controller => "admin/settings"}] %></li>
+	<% end %>
 	
 	<li><%= tab_to "Dashboard", [{:controller => "admin/dashboard"}] %></li>
 	<li><%= tab_to "Users", [{:controller => "admin/users"}] %></li>
