--- a/app/views/admin/settings/index.html.erb
+++ b/app/views/admin/settings/index.html.erb
@@ -7,25 +7,17 @@
 		These are site-wide settings. They will be used through-out your application.
 	</p>
 	<p>
-		To add new settings, simple create a migration (see migration #006 for an example), and add  your 
-		settings code here to allow the administrator to edit it.
+		To add new settings, simple create a new row in the 'settings' table. 
 	</p>
 <% end -%>
 
 <% form_tag :action => 'update' do %>
 
 <h3>General</h3>
-	
-	
-	
-<%= settings_field(Setting.load(:site_name)) %>
-<%= settings_field(Setting.load(:company_name)) %>
-<%= settings_field(Setting.load(:site_url)) %>
 
-<h3>Support</h3>
-	
-<%= settings_field(Setting.load(:support_name)) %>
-<%= settings_field(Setting.load(:support_email)) %>
+<p>There are currently no settings available.</p>
+		
+<%#= settings_field(Setting.load(:identifier)) %>
 
 <div id="submitbutton">
 	<p><%= submit_tag 'Save Settings' %></p>
