Fixes NameError issue for ticket #18
Signed-off-by: Ariejan de Vroom <ariejan@ariejan.net>

--- a/app/views/admin/shared/_tabs.html.erb
+++ b/app/views/admin/shared/_tabs.html.erb
@@ -1,5 +1,5 @@
 <ul>
-	<% if Settings.count > 0 %>
+	<% if Setting.count > 0 %>
 	<li style="float: right;"><%= tab_to "Settings", [{:controller => "admin/settings"}] %></li>
 	<% end %>
 	
