--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,17 +28,7 @@
   <div id="main">
 
     <div id="left">
-	 <% if flash[:notice] %>
-       <div id="notice"><%= flash[:notice] %></div>
-     <% end %>
-
-	 <% if flash[:warning] %>
-       <div id="warning"><%= flash[:warning] %></div>
-     <% end %>
-
-	 <% if flash[:error] %>
-       <div id="error"><%= flash[:error] %></div>
-     <% end %>
+	  <%= flash_message %>
 
       <h2 class="head"><%= yield_or_default yield(:header), "Use 'content_for :header do; end' in your view to set this title" %></h2>
 
