--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -19,19 +19,8 @@
 	<div id="left">
 		
 	<h2 class="head"><%= yield_or_default yield(:header), "Use 'content_for :header do; end' in your view to set this title" %></h2>
-
-    
-	 <% if flash[:notice] %>
-       <div id="notice"><%= flash[:notice] %></div>
-     <% end %>
-
-	 <% if flash[:warning] %>
-       <div id="warning"><%= flash[:warning] %></div>
-     <% end %>
-
-	 <% if flash[:error] %>
-       <div id="error"><%= flash[:error] %></div>
-     <% end %>
+	
+     <%= flash_message %>
 
       <div id="screen">
         <%= yield %>
