--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -18,7 +18,7 @@
     <div id="global_links">
       <%= render :partial => 'shared/global_links' %>
     </div>
-    <h1><%= configatron.site_name %> <span><%= configatron.company_name %></span></h1>
+    <h1><%= configatron.site_name %></h1>
 
     <div id="tabs">
       <%= render :partial => 'admin/shared/tabs' %>
