--- a/app/views/profiles/_my_account.html.erb
+++ b/app/views/profiles/_my_account.html.erb
@@ -2,12 +2,11 @@
 <h2>My account</h2>
 
 <div id="gravatar">
-	<%= gravatar_for @user, :size => 100 %>
+	<%= gravatar_for @user, :size => 128 %>
 </div>
 
 <ul>
 	<li><%= link_to "Update my profile", edit_profile_url(current_user) %></li>
-	<li><%= link_to "Update my avatar", edit_avatar_user_url(current_user) %></li>
 </ul>
 
 <% if @user.not_using_openid? %>
@@ -22,4 +21,14 @@
 	<li><%= link_to "Delete my account", user_url(current_user), :method => :delete, :confirm => "Are you sure you want to schedule your account for deletion? All data linked to your account on #{configatron.site_name} will be removed from our systems.\n\nTHIS ACTION CANNOT BE UNDONE!\n\nThanks for using #{configatron.site_name}. We hope to see you again soon!"%></li>
 </ul>
 <% end -%>
+
+<p>
+	<strong>How do I change my avatar?</strong>
+</p>
+
+<p>
+	<%= configatron.site_name %> uses <%= link_to "Gravatar", "http://gravatar.com" %> to retrieve user avatars, based on their e-mail address.
+	<br />
+	<%= link_to "Gravatar", "http://gravatar.com" %> is free to use. <%= link_to "Sign up now", "http://gravatar.com/signup" %> if you don't use <%= link_to "Gravatar", "http://gravatar.com" %> already.
+</p>
 <% end -%>
