--- a/app/views/dashboard/faqs.html.erb
+++ b/app/views/dashboard/faqs.html.erb
@@ -22,7 +22,11 @@
 Frequently Asked Questions:
 </h1>
 Q.How much does RubyGrade cost?<br />
-A. RubyGrade is free. It is a non-profit operation made using open source software.<br />
+A. RubyGrade is free. It is a non-profit operation made using open source software.(Ruby on Rails)<br />
+<br>
 Q. Why the name RubyGrade?<br />
 A. Because it is programmed in the ruby programming language.<br />
+<br>
+Q. Why is RubyGrade sometimes a bit slow?<br />
+A. Because it is a non-profit operation RubyGrade runs on a shared hosting plan,<br />  which means that it shares bandwidth with other sites on the server.<br />
 
