--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,10 @@
         <title>RubyGrade <%= yield(:title) %></title>
 
 
-        <%= stylesheet_link_tag 'admin', 'dialog', 'default', 'in_place_styles' %>
+        <%= stylesheet_link_tag 'admin', 'dialog', 'default', 'facebox' %>
     
   	<%= javascript_include_tag :defaults %>
-       
+        <%= javascript_include_tag 'facebox.js' %>
 </head>
 
 <body>
