--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -29,10 +29,10 @@
 <% for student in @students %>
 
   <tr valign="top" class="<%= cycle('odd', 'even') %>">
-    <td><b><%=h student.first_name %></b></td>
-    <td><b><%=h student.last_name %></b></td>
+    <td><%=h student.first_name %></td>
+    <td><%=h student.last_name %></td>
 <% for course in student.courses %>
-  <td><%=h course.name %></td>
+  <td><i><%=h course.name %></i></td>
 
 <% end %>
 <td><%= link_to image_tag('user_edit.png', {:title => 'Edit Student', :border => 0}), edit_student_path(student) %></td>
