--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -29,15 +29,13 @@
 <% for student in @students %>
 
   <tr valign="top" class="<%= cycle('odd', 'even') %>">
-    <td><%=h student.first_name %></td>
+    <td><%= link_to image_tag('user_edit.png', {:title => 'Edit Student', :border => 0}), edit_student_path(student) %><%= link_to image_tag('delete.png', {:title => 'Delete Student', :border => 0}), student, :confirm => 'Are you sure?', :method => :delete %><%=h student.first_name %></td>
     <td><%=h student.last_name %></td>
 <% for course in student.courses %>
   <td><i><%=h course.name %></i></td>
 
 <% end %>
-<td><%= link_to image_tag('user_edit.png', {:title => 'Edit Student', :border => 0}), edit_student_path(student) %></td>
-<td><%= link_to image_tag('delete.png', {:title => 'Delete Student', :border => 0}), student, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+
 <% end %>
 </table>
 
