--- a/app/views/dashboard/comments.html.erb
+++ b/app/views/dashboard/comments.html.erb
@@ -19,9 +19,10 @@ Comments
 <% end -%>
 
 <p>
-  Spotted a bug?
-  Got a suggestion?
-  If so, please make a comment below:
+  <h2> Spotted a bug?
+    Got a question or suggestion?</h2>
+  If so, please make a comment below,
+  or send an email to: rubygrade-at-gmail-dot-com
 </p>
 <div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/rubygrade/embed.js"></script><noscript><a href="http://rubygrade.disqus.com/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
 <script type="text/javascript">
