faceboxified adding new course

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -22,5 +22,5 @@
 </table>
 
 <p>
-  <%= link_to image_tag('add.png', {:title => 'Create New Class', :border => 0}), new_course_path %><%= link_to 'New Class', new_course_path %>
+  <%= link_to image_tag('add.png', {:title => 'Create New Class', :border => 0}), new_course_path %><%= link_to 'New Class', new_course_path, :rel => "facebox" %>
 </p>
