minor changes to css styles

--- a/app/views/admin/settings/index.html.erb
+++ b/app/views/admin/settings/index.html.erb
@@ -12,7 +12,7 @@
 <% end -%>
 
 <% form_tag :action => 'update' do %>
-
+  <div id="leftfixed">
 <h3>General</h3>
 
 <p>There are currently no settings available.</p>
@@ -25,3 +25,4 @@
 </div> -->
 
 <% end %>
+</div>
