--- a/app/views/dashboard/comments.html.erb
+++ b/app/views/dashboard/comments.html.erb
@@ -7,7 +7,7 @@ Comments
 	
 	<ul>
 		<li><a href="/signup">Sign up for an account</a></li>
-		<li><a href="#">Take a Tour</a></li>
+		<li><a href="/dashboard/info">More info</a></li>
 		<li><a href="/dashboard/faqs">F.A.Qs</a></li>
 		<li><a href="/dashboard/comments">Comments</a></li>
 	</ul>
