--- a/public/stylesheets/dialog.css
+++ b/public/stylesheets/dialog.css
@@ -1,7 +1,7 @@
 body {
 	font-family: "Lucida Grande", verdana, arial, helvetica, sans-serif;
 	color: #000;
-	background-color: #d4d4d4;
+	background: url(/images/main_background.png) repeat-x;
 	margin: 0;
 	padding: 0;
 	font-size: 0.8em;
